# quantum-minesweeper

./: .env_example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  deploy.sh  environment.yml  pyproject.toml  webapp.sh
.github/workflows/: deploy.yml  tests.yml
qminesweeper/: __init__.py  __main__.py  auth.py  backends.py  board.py  browser.py  chp_tableau.py  cli.py  database.py  docs_render.py  engine.py  flask-webapp.py  game.py  logging_config.py  purepy_backend.py  qiskit_backend.py  quantum_backend.py  quantum_board.py  rl_env.py  settings.py  stim_backend.py  textUI.py  webapp.py
qminesweeper/docs/: about.md  advanced_setup.md  simple_setup.md
qminesweeper/docs/help/H-move/: text.md
qminesweeper/docs/help/M-move/: text.md
qminesweeper/docs/help/P-move/: text.md
qminesweeper/docs/help/S-move/: text.md
qminesweeper/docs/help/X-move/: text.md
qminesweeper/docs/help/Y-move/: text.md
qminesweeper/docs/help/Z-move/: text.md
qminesweeper/docs/help/mine-counter/: text.md
qminesweeper/static/: clue_style.js  help.css  style.css  theme.js  tools.js
qminesweeper/static/help/H-gate/: text.html  visual.html
qminesweeper/static/help/M-move/: text.html
qminesweeper/static/help/P-move/: text.html
qminesweeper/static/help/S-gate/: text.html  visual.html
qminesweeper/static/help/SDG-gate/: text.html  visual.html
qminesweeper/static/help/SX-gate/: text.html  visual.html
qminesweeper/static/help/SXDG-gate/: text.html  visual.html
qminesweeper/static/help/SY-gate/: text.html  visual.html
qminesweeper/static/help/SYDG-gate/: text.html  visual.html
qminesweeper/static/help/X-gate/: text.html  visual.html
qminesweeper/static/help/Y-gate/: text.html  visual.html
qminesweeper/static/help/Z-gate/: text.html  visual.html
qminesweeper/static/help/entanglement/: text.html
qminesweeper/static/help/mine-counter/: text.html
qminesweeper/static/scripts/: browser-main.js  clue_style.js  engine.js  help.js  pyodide-engine.js  render.js  theme_toggle.js  tools.js
qminesweeper/static/styles/: admin.css  base.css  game.css  help.css  setup.css
qminesweeper/templates/: _setup_content.html  about.html  admin_home.html  admin_login.html  base.html  db_view.html  footer.html  game.html  header.html  robots.txt  setup.html  sitemap.xml
scripts/: artifact_cleanup_policy.json  benchmark_backends.py  browser_index.html  build.sh  build_browser.py  config.sh  deploy.sh  entrypoint.sh  make_icons.py  run_local.sh
scripts/pwa/: manifest.webmanifest  sw.js
src/: backend.py  flask-webapp.py  qiskit_backend.py  qminesweeper.py  qms-tui.py  qms_TUI.py  quantum_backend.py  quantum_board.py  stim_backend.py  style.css  test_notebook.ipynb  textUI.py  text_ui.py  webapp.py
static/: styles.css
technical_paper/: notes.md  quantum_minesweeper.bib
templates/: game.html  setup.html
templates-old/: setup.html
tests/: conftest.py  test_allowed_moves.py  test_backend_parity.py  test_backends.py  test_board_init.py  test_browser.py  test_engine.py  test_entanglement.py  test_entropy.py  test_exports.py  test_exports_golden.py  test_flood_fill.py  test_measurement.py  test_moves.py  test_parse_cmd.py  test_rl_env.py  test_static_js.py  test_status.py  test_webapp_logic.py  test_win_conditions.py
