[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qminesweeper"
version = "0.1.2"
description = "Quantum Minesweeper Game"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name="Andrea Maiani", email="andrea.maiani@su.se"}
]
maintainers = [
  {name="Andrea Maiani", email="andrea.maiani@su.se"}
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  "numpy",
  "rich",
  "typer>=0.9",
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "stim",
  "starlette",
  "itsdangerous",
  "python-multipart",
  "markdown",
  "pymdown-extensions",
  "pydantic-settings"
]

[project.optional-dependencies]
qiskit = ["qiskit"]
dev = [
  "pytest",
  "pytest-cov",
  "qiskit",
  "ruff",
  "pre-commit"
]

[project.urls]
Repository = "https://github.com/maiani/quantum-minesweeper.git"
Changelog = "https://github.com/maiani/quantum-minesweeper/blob/master/CHANGELOG.md"

[project.scripts]
qminesweeper = "qminesweeper.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["qminesweeper*"]

[tool.setuptools.package-data]
qminesweeper = [
  "templates/**/*",
  "static/**/*",
  "docs/**/*"
]

# ---------------- Ruff ----------------

[tool.ruff]
line-length = 120
target-version = "py312"

# Enable linting + autofix
[tool.ruff.lint]
select = ["E", "F", "I"]  # pyflakes, pycodestyle, and isort rules
fixable = ["ALL"]

# Enable Ruff formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
