[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qminesweeper"
version = "0.2.2"
description = "Quantum Minesweeper Game"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name="Andrea Maiani", email="andrea.maiani@su.se"},
  {name="Niklas Engelhardt Önne", email="niklas.e.onne@fysik.su.se"},
  {name="Jason Pye", email="jason.pye@su.se"}
]
maintainers = [
  {name="Andrea Maiani", email="andrea.maiani@su.se"}
]
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  "numpy>=1.26,<3",
  "rich>=13,<16",
  "typer>=0.9,<1",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.30,<1",
  "jinja2>=3.1,<4",
  "starlette>=0.40,<2",
  "itsdangerous>=2.1,<3",
  "python-multipart>=0.0.9,<0.1",
  "markdown>=3.5,<4",
  "pymdown-extensions>=10,<11",
  "pydantic-settings>=2.4,<3"
]

[project.optional-dependencies]
stim = ["stim>=1.13,<2"]
qiskit = ["qiskit>=1.2,<3"]
dev = [
  "pytest>=8,<10",
  "stim>=1.13,<2",
  "qiskit>=1.2,<3",
  "ruff>=0.6",
  "pre-commit>=3"
]

[project.urls]
Repository = "https://github.com/maiani/quantum-minesweeper.git"
Changelog = "https://github.com/maiani/quantum-minesweeper/blob/master/CHANGELOG.md"

[project.scripts]
qminesweeper = "qminesweeper.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["qminesweeper*"]

[tool.setuptools.package-data]
qminesweeper = [
  "templates/**/*",
  "static/**/*",
  "docs/**/*"
]

# ---------------- Ruff ----------------

[tool.ruff]
line-length = 120
target-version = "py312"
extend-include = ["*.ipynb", "*.md", "*.toml", "*.yml", "*.yaml", "*.json"]

# Enable linting + autofix
[tool.ruff.lint]
select = ["E", "F", "I"]  # pyflakes, pycodestyle, and isort rules
fixable = ["ALL"]

# Enable Ruff formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88
